ergon_macros/tests/ui/flow_not_async.stderr
error: #[flow] can only be applied to async functions
  --> tests/ui/flow_not_async.rs:10:5
   |
10 |     fn not_async_flow(self) -> Result<i32, ExecutionError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
